# Agentic-AI-personal-Assistant

./: Dockerfile  README.md  app.py  docker-compose.yaml  env_example.txt  postgresql_install.md  pyproject.toml  requirements.txt  template.py
config/: settings.yaml
research/: trials.ipynb
src/chatbot/: __init__.py
src/chatbot/constants/: __init__.py
src/chatbot/database/: __init__.py  connection.py  models.py  repository.py
src/chatbot/graph/: __init__.py  llm_factory.py  ltm.py  nodes.py  pipeline.py  state.py
src/chatbot/rag/: embedding_llm_factory.py  loader.py  pipeline.py  splitter.py  vector_store.py
src/chatbot/tools/: __init__.py  calculator.py  search_tool.py
src/chatbot/utils/: __init__.py  common.py
